[gd_scene load_steps=5 format=3 uid="uid://c02a8uft3hkbw"]

[ext_resource type="Script" uid="uid://b7bhs0ddypfsu" path="res://GameFiles/SRC/Player/Scripts/PlayerController.gd" id="1_ooklf"]
[ext_resource type="PackedScene" uid="uid://c05bb8ujr8apa" path="res://GameFiles/SRC/Player/Scenes/PlayerRigged.tscn" id="1_pvnnw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pvnnw"]
radius = 0.3
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_ooklf"]
radius = 0.15

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ooklf")

[node name="BakedPlayer" parent="." instance=ExtResource("1_pvnnw")]

[node name="Skeleton3D" parent="BakedPlayer/FullModel" index="0"]
bones/0/position = Vector3(-1.7136333e-08, 0.058987338, -0.05654865)
bones/0/rotation = Quaternion(0.76535785, -7.374716e-07, -9.941588e-07, 0.643605)
bones/1/rotation = Quaternion(-0.82133365, 6.0748846e-07, 1.1077443e-06, 0.5704481)
bones/2/rotation = Quaternion(0.0018054185, -0.097864576, 0.9948575, 0.026035942)
bones/3/rotation = Quaternion(-0.024662431, 0.017066691, -0.01791118, 0.9993897)
bones/4/rotation = Quaternion(0.53570473, 0.037773862, 0.03210164, 0.84294903)
bones/8/rotation = Quaternion(-0.0017878822, -0.09842525, 0.9948052, -0.02592168)
bones/9/rotation = Quaternion(-0.024097724, -0.017087856, 0.018016381, 0.9994012)
bones/10/rotation = Quaternion(0.53570515, -0.03777426, -0.032101206, 0.84294873)
bones/11/rotation = Quaternion(0.20225641, 0.006952657, 0.03680896, 0.97861594)
bones/14/rotation = Quaternion(0.108054124, 2.4853997e-09, 1.3593599e-08, 0.9941451)
bones/15/rotation = Quaternion(-0.21213368, -2.1204116e-08, 1.8372278e-08, 0.9772407)
bones/16/rotation = Quaternion(0.1913029, 1.3464691e-07, -4.9431154e-08, 0.9815311)
bones/17/rotation = Quaternion(-0.04661211, -0.047847304, -0.78096336, 0.6209945)
bones/18/rotation = Quaternion(-0.04003308, 0.1676871, -0.49447882, 0.8519209)
bones/19/rotation = Quaternion(0.12735476, 0.033959247, -0.09012445, 0.9871703)
bones/20/rotation = Quaternion(0.0007919994, 0.53245366, -0.048988957, 0.84503996)
bones/21/rotation = Quaternion(-0.578424, 0.64952326, -0.066073254, -0.48905993)
bones/22/rotation = Quaternion(-0.0061580306, 0.008950276, 0.15947117, 0.9871428)
bones/23/rotation = Quaternion(-0.21735618, 0.014312248, -0.0026300296, 0.9759839)
bones/24/rotation = Quaternion(-0.018176002, 0.9905133, -0.10510239, -0.08663984)
bones/25/rotation = Quaternion(-0.2734606, -0.10489469, 0.037790556, 0.95539963)
bones/26/rotation = Quaternion(0.072940625, 0.0077663613, 0.030592289, 0.9968367)
bones/27/rotation = Quaternion(-0.08759291, -0.013200595, 0.026633017, 0.99571276)
bones/28/rotation = Quaternion(0.05720415, 0.9938016, -0.070020966, -0.06467801)
bones/29/rotation = Quaternion(-0.24345548, -0.086497694, -0.026529223, 0.96568304)
bones/30/rotation = Quaternion(0.06933926, 0.027637072, 0.008368913, 0.99717516)
bones/31/rotation = Quaternion(-0.064793214, -0.002861599, 0.013079154, 0.99780893)
bones/32/rotation = Quaternion(0.06809804, 0.99659705, -0.033101913, -0.032577284)
bones/33/rotation = Quaternion(-0.17793551, -0.025570571, -0.015753895, 0.9835838)
bones/34/rotation = Quaternion(0.04955997, -0.007228489, -0.018567229, 0.9985724)
bones/35/rotation = Quaternion(-0.07283724, -0.009967377, 0.0041971845, 0.99728525)
bones/36/rotation = Quaternion(0.05521861, 0.99783593, 0.02445164, -0.026009433)
bones/37/rotation = Quaternion(-0.10863301, -0.022919087, -0.0027865293, 0.9938139)
bones/38/rotation = Quaternion(0.0409078, 0.0004664321, -0.017019555, 0.99901795)
bones/39/rotation = Quaternion(-0.08303236, -0.008969895, -0.010127429, 0.996455)
bones/42/rotation = Quaternion(-0.04660848, 0.047844358, 0.7809634, 0.6209949)
bones/43/rotation = Quaternion(-0.0073524816, -0.2114818, 0.5080701, 0.83491683)
bones/44/rotation = Quaternion(0.13081574, -0.030872509, 0.04919188, 0.98970425)
bones/45/rotation = Quaternion(-0.0075616157, -0.53393483, 0.06445463, 0.84303147)
bones/47/rotation = Quaternion(-0.0057676677, -0.006533722, -0.1594857, 0.98716176)
bones/48/rotation = Quaternion(-0.2173619, -0.016701018, 0.0020980607, 0.97594595)
bones/50/rotation = Quaternion(-0.27349457, 0.1040363, -0.037544884, 0.9554934)
bones/51/rotation = Quaternion(0.07159835, -0.047633942, -0.033614192, 0.9957283)
bones/52/rotation = Quaternion(-0.0886089, 0.053912356, -0.023028357, 0.9943398)
bones/54/rotation = Quaternion(-0.24345557, 0.08649764, 0.026529253, 0.96568304)
bones/55/rotation = Quaternion(0.06972168, 0.03351325, -0.0041046795, 0.9969949)
bones/56/rotation = Quaternion(-0.064157106, -0.07563294, -0.015908794, 0.9949425)
bones/58/rotation = Quaternion(-0.17831734, 0.054069296, 0.010589769, 0.9824293)
bones/59/rotation = Quaternion(0.048752524, -0.009496617, 0.02059423, 0.9985534)
bones/60/rotation = Quaternion(-0.0727377, 0.0056772847, -0.0056660534, 0.99731886)
bones/62/rotation = Quaternion(-0.10865009, 0.06673166, -0.002007737, 0.9918357)
bones/63/rotation = Quaternion(0.039815687, -0.02878362, 0.019437756, 0.9986032)
bones/64/rotation = Quaternion(-0.08346469, 0.032548904, 0.0055298, 0.9959637)
bones/67/rotation = Quaternion(0.3568626, 1.038852e-08, 5.0375956e-08, 0.9341569)
bones/68/rotation = Quaternion(-0.33018732, -6.348375e-08, 9.564777e-09, 0.9439154)
bones/70/rotation = Quaternion(0.004218919, 0.6745006, 0.73548067, -0.06402697)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_pvnnw")

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount"]
shape = SubResource("SphereShape3D_ooklf")
spring_length = 1.2

[node name="Camera3D" type="Camera3D" parent="CameraMount/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0)
current = true

[editable path="BakedPlayer"]
